<resources>
    <string name="app_name">Exercise2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="person_name">Large Text</string>
    <string name="name">Your name</string>
    <string name="email">Your email</string>
    <string name="phone">Your phone</string>
    <string-array name="contact">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
    </string-array>
    <string name="title_activity_activity_two">ActivityTwo</string>
    <string name="screenView">Screen 2</string>
    <string name="nameView">Name</string>
    <string name="phoneView">Phone Number</string>
    <string name="mobileView">Mobile</string>
    <string name="emailView">Email</string>
    <string name="decision">decision</string>
    <string name="text">User Declined</string>


</resources>
